# server-historical

./: .gitattributes  .gitignore  LICENSE  README.md  context_actions.txt  irc_idea.txt  protocol.txt  sock chat release bullshit.txt  sockchat.sql
client/: bbcode.json  bbcode.json.readme  config.php  constants.php  emotes.json  icons.json  index.php  install.php  style.css  system.php  todo.txt
client/auth/: .htaccess  phpbb.php  phpbb_alt.php  readme.txt
client/auth/keys/: index.html
client/conf/: bbcode.json  context.json  emotes.json  icons.json  settings.json
client/headers/: phpbb.php
client/js/: channel.js  channel.js.map  channel.ts  chat.js  chat.js.map  chat.ts  cookies.js  cookies.js.map  cookies.ts  lang.js  lang.js.map  lang.ts  logs.js  logs.js.map  logs.ts  msg.js  msg.js.map  msg.ts  notify.js  notify.js.map  notify.ts  sock.js  sock.js.map  sock.ts  sound.js  sound.js.map  sound.ts  ui.js  ui.js.map  ui.ts  user.js  user.js.map  user.ts  utf8.d.ts  utf8.js  utils.js  utils.js.map  utils.ts
client/lang/: el.json  en.json  jp.json  nl.json  pl.json
client/lang/el/: common.json
client/lang/en/: common.json  core.json  session.json
client/lang/in/: common.json
client/lang/jp/: common.json
client/lib/: .htaccess  auth.php  cache.php  logs.php  system.php  template.php
client/styles/: Beige.css  Black.css  Blue.css  Cobalt.css  Lithium.css  Mercury.css  Oxygen.css  Sulfur.css  White.css  Yuuno.css  _global.css  _picker.css  _positioning.css  black.css  blue.css  dffhddfh.css  faggot.css  white.css
client/tpl/: chat.html  logs.html
server/: CMakeLists.txt  Program.cs  User.cs  chat.db-journal  chat.sql  composer.phar  config.php  constants.php  daemon  ircd.php  sc_config.ini  server.csproj  server.php  server.sln
server/Properties/: AssemblyInfo.cs
server/commands/: ban.php  create.php  delete.php  e.php  generic_cmd.php  join.php  kick.php  msg.php  nick.php  priv.php  pwd.php  roll.php  say.php  whois.php
server/core/: core.vcxproj  core.vcxproj.filters  main.cpp  sockchat - Shortcut.lnk  stdcc.hpp
server/irc/: ircd.php
server/lib/: channel.php  constants.php  context.php  db.php  mods.php  msg.php  sock.php  user.php  utils.php
server/mods/: generic_mod.php
server/mods/Greeter/: Greeter.php
server/mods/core/: core.php
server/mods/ircd/: ircd.php
server/mods/session/: session.php
server/sockchat/: cthread.cpp  cthread.h  main.cpp  sc_config.ini  sc_test_save.ini  sockchat.vcxproj  sockchat.vcxproj.filters  threadctx.cpp
server/socklib/: base64.cpp  http.cpp  ini.cpp  library.cpp  msg.cpp  rawsock.cpp  sha1.cpp  socket.cpp  socklib.vcxproj  socklib.vcxproj.filters  thread.cpp  user.cpp  utils.cpp  websocket.cpp
server/socklib/socklib/: base64.h  context.h  dirent.h  ini.h  library.hpp  msg.h  sha1.h  socket.hpp  stdcc.hpp  thread.hpp  utils.h
server/socklib/socklib/utf8/: core.h
server/test/: CMakeCache.txt
server_new/: server_new.sln
server_new/server_new/: main.cpp  server_new.vcxproj  socket.cpp  socket.hpp  thread.cpp  thread.hpp  websocket.cpp
server_old/: config.php
server_old/lib/: auth.php  constants.php  context.php  mods.php  msg.php  user.php  utils.php
server_old/mods/: generic_mod.php
(+5 files in other folders)
