CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(SockChatServer)

FILE(GLOB SockLibSrc socklib/*.cpp)
ADD_LIBRARY(socklib SHARED ${SockLibSrc})
SET_TARGET_PROPERTIES(socklib PROPERTIES COMPILE_FLAGS "-DSOCKLIB_EXPORT -DNULL=0")
IF(CMAKE_COMPILER_IS_GNUCXX)
	TARGET_LINK_LIBRARIES(socklib dl)
ENDIF()

#FILE(GLOB CoreLibSrc core/*.cpp)
ADD_LIBRARY(core SHARED core/main.cpp)
SET_TARGET_PROPERTIES(core PROPERTIES COMPILE_FLAGS "-DLIBCORE_EXPORT -DNULL=0")
SET_TARGET_PROPERTIES(core PROPERTIES INCLUDE_DIRECTORIES "socklib/")
TARGET_LINK_LIBRARIES(core socklib)

ADD_EXECUTABLE(server sockchat/main.cpp)
SET_TARGET_PROPERTIES(server PROPERTIES COMPILE_FLAGS "-DNULL=0")
SET_TARGET_PROPERTIES(server PROPERTIES INCLUDE_DIRECTORIES "socklib/")
TARGET_LINK_LIBRARIES(server socklib)

ADD_DEPENDENCIES(core socklib)
ADD_DEPENDENCIES(server core socklib)